<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".login.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_70sdp"
                android:scaleType="centerInside"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/logo_w_txt_white_no" />

            <TextView
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_25ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/mohon_login_untuk_melanjutkan"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                app:hintEnabled="false"
                android:layout_marginBottom="@dimen/_5sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/email"
                    android:padding="@dimen/_12sdp"
                    android:alpha="0.7"
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:id="@+id/txt_password_login"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_pswd_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:alpha="0.7"
                    android:padding="@dimen/_12sdp"
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/_15ssp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:paddingEnd="@dimen/_20sdp"
                android:paddingStart="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:padding="@dimen/_15sdp"
                android:text="@string/login"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belum_punya_akun"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/roboto"/>

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Daftar"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"/>
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>